--- a/public/index.html
+++ b/public/index.html
@@ -29,7 +29,7 @@
     <title>React App</title>
   </head>
   <body >
-    <div id="myDiv" class="animate-bottom" style="display:block">
+    <div id="myDiv" class="animate-bottom" style="display:block;text-align: center">
       <noscript>You need to enable JavaScript to run this app.</noscript>
       <div id="root"></div>
     </div>
